Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Đề xuất Giảm thuế VAT đến hết năm 2026: Kích cầu tiêu dùng, thúc đẩy tăng trưởng",
+    "content": "Theo kiến nghị của các chuyên gia, việc giảm thuế giá trị gia tăng (VAT) sẽ giúp kích cầu tiêu dùng và thúc đẩy tăng trưởng kinh tế tại Việt Nam. Đề xuất này kêu gọi kéo dài thời gian giảm thuế VAT đến hết năm 2026 và giảm 2% cho toàn bộ hàng hóa, dịch vụ có thuế suất 10%. Các chuyên gia nhận định việc giảm thuế không chỉ hỗ trợ người tiêu dùng mà còn thúc đẩy sản xuất, từ đó gia tăng thu ngân sách nhà nước.",
+    "link": "https://tuoitre.vn/de-xuat-giam-thue-vat-den-het-nam-2026-kich-cau-tieu-dung-thuc-day-tang-truong-20250312084649235.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao Việt Nam nên giảm thuế VAT đến năm 2026?",
+    "answers": [
+      {
+        "text": "Để kích cầu tiêu dùng và thúc đẩy tăng trưởng kinh tế.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng thu ngân sách ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm giá xăng dầu cho người tiêu dùng.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tỷ lệ thất nghiệp ngay lập tức.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VinFast bắt tay ngân hàng Indonesia thúc đẩy giao thông xanh",
+    "content": "VinFast và Ngân hàng BNI của Indonesia đã ký thỏa thuận hợp tác chiến lược nhằm xây dựng hệ sinh thái giao thông bền vững. Cả hai bên sẽ tập trung vào các giải pháp tài chính giúp người dân Indonesia dễ dàng sở hữu xe điện. Hợp tác này không chỉ thúc đẩy việc sử dụng xe điện mà còn góp phần nâng cao nhận thức về phát triển bền vững và củng cố quan hệ giữa Việt Nam và Indonesia.",
+    "link": "https://tuoitre.vn/vinfast-bat-tay-ngan-hang-indonesia-thuc-day-giao-thong-xanh-20250312083034374.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã hợp tác để thúc đẩy giao thông xanh tại Indonesia?",
+    "answers": [
+      {
+        "text": "Ngân hàng BNI",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng ABC",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng XYZ",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Quốc dân",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Việt Nam - Singapore: Thu hút 'phượng hoàng xây tổ'",
     "content": "Quan hệ Việt Nam - Singapore đang phát triển mạnh mẽ với nhiều cơ hội hợp tác mới trong kỷ nguyên mới, đặc biệt trong bối cảnh Tổng Bí thư Tô Lâm thăm Singapore. Sự hợp tác này không chỉ thúc đẩy thương mại song phương mà còn góp phần vào sự ổn định và phát triển của khu vực ASEAN. Singapore là nhà đầu tư lớn tại Việt Nam, với nhiều dự án và khu công nghiệp đã tạo ra hàng trăm ngàn việc làm, qua đó nâng cao năng lực cạnh tranh của Việt Nam trên trường quốc tế.",
     "link": "https://tuoitre.vn/viet-nam-singapore-thu-hut-phuong-hoang-xay-to-20250312075918876.htm",
@@ -776,6 +834,33 @@
     ]
   },
   {
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
+    "answers": [
+      {
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
+        "correct": true
+      },
+      {
+        "text": "Tăng giá vé vào cửa cho du khách.",
+        "correct": false
+      },
+      {
+        "text": "Giảm số lượng khách tham quan.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
     "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
     "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
@@ -802,33 +887,6 @@
       },
       {
         "text": "1.500 cửa hàng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sun World và Vietravel hợp tác chiến lược",
-    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
-    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
-        "correct": true
-      },
-      {
-        "text": "Tăng giá vé vào cửa cho du khách.",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng khách tham quan.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tour du lịch trong nước.",
         "correct": false
       }
     ]
