Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,33 @@
     ]
   },
   {
+    "title": "Nên mua bảo hiểm sức khỏe khi đã có bảo hiểm nhân thọ?",
+    "content": "Bài viết phân tích lợi ích của việc mua bảo hiểm sức khỏe khi đã có bảo hiểm nhân thọ. Bảo hiểm nhân thọ chủ yếu bảo vệ tài chính trước các rủi ro liên quan đến sinh mạng, trong khi bảo hiểm sức khỏe hỗ trợ chi phí y tế như nằm viện và thuốc men. Người tham gia bảo hiểm cần xem xét nhu cầu cá nhân và các quyền lợi của hai loại bảo hiểm để quyết định có nên mua thêm bảo hiểm sức khỏe hay không. Việc kết hợp cả hai loại bảo hiểm có thể mang lại sự bảo vệ toàn diện hơn cho người tham gia.",
+    "link": "https://vnexpress.net/nen-mua-bao-hiem-suc-khoe-khi-da-co-bao-hiem-nhan-tho-4856481.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có nên mua bảo hiểm sức khỏe nếu đã có bảo hiểm nhân thọ không?",
+    "answers": [
+      {
+        "text": "Có, để bảo vệ toàn diện hơn về sức khỏe.",
+        "correct": true
+      },
+      {
+        "text": "Không, bảo hiểm nhân thọ đã đủ.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ khi có tiền.",
+        "correct": false
+      },
+      {
+        "text": "Không, bảo hiểm sức khỏe không cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Việt Nam - Singapore: Thu hút 'phượng hoàng xây tổ'",
     "content": "Quan hệ Việt Nam - Singapore đang phát triển mạnh mẽ với nhiều cơ hội hợp tác mới trong kỷ nguyên mới, đặc biệt trong bối cảnh Tổng Bí thư Tô Lâm thăm Singapore. Sự hợp tác này không chỉ thúc đẩy thương mại song phương mà còn góp phần vào sự ổn định và phát triển của khu vực ASEAN. Singapore là nhà đầu tư lớn tại Việt Nam, với nhiều dự án và khu công nghiệp đã tạo ra hàng trăm ngàn việc làm, qua đó nâng cao năng lực cạnh tranh của Việt Nam trên trường quốc tế.",
     "link": "https://tuoitre.vn/viet-nam-singapore-thu-hut-phuong-hoang-xay-to-20250312075918876.htm",
@@ -803,37 +830,6 @@
     ]
   },
   {
-    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
-    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
-    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dành cho người lớn tuổi",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho trẻ em",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động ngoài trời",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp dịch vụ mua sắm cao cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sun World và Vietravel hợp tác chiến lược",
     "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
     "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
@@ -856,6 +852,37 @@
       },
       {
         "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
+    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
+    "answers": [
+      {
+        "text": "14 kg",
+        "correct": true
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
         "correct": false
       }
     ]
@@ -892,32 +919,32 @@
     ]
   },
   {
-    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
-    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
     "importance": 8,
-    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
     "answers": [
       {
-        "text": "14 kg",
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
         "correct": true
       },
       {
-        "text": "10 kg",
+        "text": "Chỉ dành cho người lớn tuổi",
         "correct": false
       },
       {
-        "text": "20 kg",
+        "text": "Chỉ dành cho trẻ em",
         "correct": false
       },
       {
-        "text": "5 kg",
+        "text": "Không có hoạt động ngoài trời",
         "correct": false
       },
       {
-        "text": "8 kg",
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -1182,6 +1209,37 @@
     ]
   },
   {
+    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
+    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
+    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
+    "cat": "gia-dinh",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
+    "answers": [
+      {
+        "text": "Hát Quốc ca Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Đọc thơ bằng tiếng Nhật",
+        "correct": false
+      },
+      {
+        "text": "Nhảy múa cùng cô dâu",
+        "correct": false
+      },
+      {
+        "text": "Chơi nhạc cụ truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức tiệc lớn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
     "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
     "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
@@ -1235,37 +1293,6 @@
       },
       {
         "text": "Họ không tin vào bác sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
-    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
-    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
-    "cat": "gia-dinh",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
-    "answers": [
-      {
-        "text": "Hát Quốc ca Việt Nam",
-        "correct": true
-      },
-      {
-        "text": "Đọc thơ bằng tiếng Nhật",
-        "correct": false
-      },
-      {
-        "text": "Nhảy múa cùng cô dâu",
-        "correct": false
-      },
-      {
-        "text": "Chơi nhạc cụ truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức tiệc lớn",
         "correct": false
       }
     ]
