Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Arteta: 'Arsenal không chịu sức ép lớn ở Champions League'",
+    "content": "HLV Mikel Arteta khẳng định rằng Arsenal không chịu sức ép lớn trong cuộc đua Champions League, mặc dù họ đã hụt hơi trong cuộc đua vô địch Ngoại hạng Anh. Arsenal hiện đang có 55 điểm và kém Liverpool 15 điểm, trong khi mùa giải chỉ còn 10 vòng đấu. Arteta cho biết đội bóng của ông rất tâm huyết với Champions League và mong muốn đạt được đẳng cấp cao nhất. Arsenal đã có chiến thắng 7-1 trước PSV ở lượt đi vòng 1/8 và gần như chắc chắn có mặt ở tứ kết.",
+    "link": "https://vnexpress.net/arteta-arsenal-khong-chiu-suc-ep-lon-o-champions-league-4860099.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Arsenal có chịu sức ép lớn ở Champions League không?",
+    "answers": [
+      {
+        "text": "Không",
+        "correct": true
+      },
+      {
+        "text": "Có",
+        "correct": false
+      },
+      {
+        "text": "Chỉ một chút",
+        "correct": false
+      },
+      {
+        "text": "Rất nhiều",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đề xuất Giảm thuế VAT đến hết năm 2026: Kích cầu tiêu dùng, thúc đẩy tăng trưởng",
     "content": "Theo kiến nghị của các chuyên gia, việc giảm thuế giá trị gia tăng (VAT) sẽ giúp kích cầu tiêu dùng và thúc đẩy tăng trưởng kinh tế tại Việt Nam. Đề xuất này kêu gọi kéo dài thời gian giảm thuế VAT đến hết năm 2026 và giảm 2% cho toàn bộ hàng hóa, dịch vụ có thuế suất 10%. Các chuyên gia nhận định việc giảm thuế không chỉ hỗ trợ người tiêu dùng mà còn thúc đẩy sản xuất, từ đó gia tăng thu ngân sách nhà nước.",
     "link": "https://tuoitre.vn/de-xuat-giam-thue-vat-den-het-nam-2026-kich-cau-tieu-dung-thuc-day-tang-truong-20250312084649235.htm",
@@ -201,6 +228,37 @@
       },
       {
         "text": "Ngân hàng Thế giới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nissan thay CEO sau lùm xùm sáp nhập Honda",
+    "content": "Nissan đã quyết định bổ nhiệm Ivan Espinosa làm CEO mới thay cho ông Makoto Uchida, bắt đầu từ ngày 1 tháng 4 năm 2025. Quyết định này được đưa ra sau nhiều tuần đồn đoán và trong bối cảnh Nissan đang phải đối mặt với nhiều khó khăn về doanh số và các vụ bê bối quản lý. Espinosa, người có hơn 20 năm kinh nghiệm tại Nissan, được kỳ vọng sẽ giúp hồi sinh thương hiệu và cải thiện tình hình tài chính của công ty trong thời gian tới. Việc bổ nhiệm này cũng diễn ra trong bối cảnh Nissan đang cân nhắc các cuộc đàm phán sáp nhập và cải tổ ban quản lý cấp cao.",
+    "link": "https://vnexpress.net/nissan-thay-ceo-sau-lum-xum-sap-nhap-honda-4860139.html",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Ai là CEO mới của Nissan sau khi thay thế Makoto Uchida?",
+    "answers": [
+      {
+        "text": "Ivan Espinosa",
+        "correct": true
+      },
+      {
+        "text": "Makoto Uchida",
+        "correct": false
+      },
+      {
+        "text": "Carlos Ghosn",
+        "correct": false
+      },
+      {
+        "text": "Hideyuki Sakamoto",
+        "correct": false
+      },
+      {
+        "text": "Kunio Nakaguro",
         "correct": false
       }
     ]
@@ -507,33 +565,6 @@
     ]
   },
   {
-    "title": "Sun World và Vietravel hợp tác chiến lược",
-    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
-    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
-        "correct": true
-      },
-      {
-        "text": "Tăng giá vé vào cửa cho du khách.",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng khách tham quan.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tour du lịch trong nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
     "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
@@ -560,6 +591,37 @@
       },
       {
         "text": "8 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dành cho người lớn tuổi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động ngoài trời",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -596,32 +658,28 @@
     ]
   },
   {
-    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
-    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
-    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
     "cat": "du-lich",
     "positivity": 9,
     "importance": 8,
-    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
     "answers": [
       {
-        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
         "correct": true
       },
       {
-        "text": "Chỉ dành cho người lớn tuổi",
+        "text": "Tăng giá vé vào cửa cho du khách.",
         "correct": false
       },
       {
-        "text": "Chỉ dành cho trẻ em",
+        "text": "Giảm số lượng khách tham quan.",
         "correct": false
       },
       {
-        "text": "Không có hoạt động ngoài trời",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp dịch vụ mua sắm cao cấp",
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
         "correct": false
       }
     ]
@@ -2196,6 +2254,33 @@
     ]
   },
   {
+    "title": "Lý do người bệnh viêm khớp nên hạn chế đường",
+    "content": "Bài viết nhấn mạnh rằng người bệnh viêm khớp nên hạn chế tiêu thụ đường để giảm tình trạng viêm và kiểm soát các triệu chứng bệnh. Đường không chỉ làm tăng axit uric mà còn có thể dẫn đến các vấn đề sức khỏe khác như bệnh tim mạch và béo phì, làm trầm trọng thêm tình trạng viêm khớp. Nghiên cứu cho thấy các loại thực phẩm và đồ uống có đường, như soda và bánh ngọt, có thể làm nặng thêm các triệu chứng viêm khớp dạng thấp và thoái hóa khớp. Do đó, người bệnh cần chú ý đến lượng đường nạp vào hàng ngày để cải thiện sức khỏe khớp.",
+    "link": "https://vnexpress.net/ly-do-nguoi-benh-viem-khop-nen-han-che-duong-4859548.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao người bệnh viêm khớp nên hạn chế đường?",
+    "answers": [
+      {
+        "text": "Đường có thể làm tăng tình trạng viêm và đau khớp.",
+        "correct": true
+      },
+      {
+        "text": "Đường giúp cải thiện sức khỏe khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đường là nguồn năng lượng cần thiết cho cơ thể.",
+        "correct": false
+      },
+      {
+        "text": "Đường không ảnh hưởng đến viêm khớp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thói quen nào khiến sức khỏe phụ nữ giảm sút?",
     "content": "Bài viết điểm qua những thói quen ăn uống và sinh hoạt có thể ảnh hưởng tiêu cực đến sức khỏe của phụ nữ. Những thói quen tưởng chừng như vô hại nhưng lại gây ra sự thay đổi trong quá trình trao đổi chất và nội tiết. Việc nhận thức và thay đổi những thói quen này là rất quan trọng để duy trì sức khỏe tốt cho phái đẹp.",
     "link": "https://vnexpress.net/thoi-quen-nao-khien-suc-khoe-phu-nu-giam-sut-4859901.html",
@@ -2222,33 +2307,6 @@
       },
       {
         "text": "Giữ tâm lý tích cực",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lý do người bệnh viêm khớp nên hạn chế đường",
-    "content": "Bài viết nhấn mạnh rằng người bệnh viêm khớp nên hạn chế tiêu thụ đường để giảm tình trạng viêm và kiểm soát các triệu chứng bệnh. Đường không chỉ làm tăng axit uric mà còn có thể dẫn đến các vấn đề sức khỏe khác như bệnh tim mạch và béo phì, làm trầm trọng thêm tình trạng viêm khớp. Nghiên cứu cho thấy các loại thực phẩm và đồ uống có đường, như soda và bánh ngọt, có thể làm nặng thêm các triệu chứng viêm khớp dạng thấp và thoái hóa khớp. Do đó, người bệnh cần chú ý đến lượng đường nạp vào hàng ngày để cải thiện sức khỏe khớp.",
-    "link": "https://vnexpress.net/ly-do-nguoi-benh-viem-khop-nen-han-che-duong-4859548.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao người bệnh viêm khớp nên hạn chế đường?",
-    "answers": [
-      {
-        "text": "Đường có thể làm tăng tình trạng viêm và đau khớp.",
-        "correct": true
-      },
-      {
-        "text": "Đường giúp cải thiện sức khỏe khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đường là nguồn năng lượng cần thiết cho cơ thể.",
-        "correct": false
-      },
-      {
-        "text": "Đường không ảnh hưởng đến viêm khớp.",
         "correct": false
       }
     ]
@@ -2946,33 +3004,6 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
-    "answers": [
-      {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
-        "correct": false
-      },
-      {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -2995,6 +3026,33 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "correct": false
+      },
+      {
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -4588,33 +4646,6 @@
       },
       {
         "text": "Sân bay Nội Bài",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Syria: Giao tranh làm 1.500 người chết, người dân vào căn cứ Nga trú ẩn",
-    "content": "Hơn 1.500 người đã thiệt mạng trong các cuộc giao tranh tại Syria, trong đó có 1.068 thường dân, kể từ ngày 6/3. Hàng trăm dân thường đã tìm nơi trú ẩn tại căn cứ không quân Khmeimim của Nga để tránh bạo lực. Chính quyền Syria đã hoàn tất một \"chiến dịch quân sự\" và cam kết sẽ trừng phạt những kẻ kích động bạo lực, trong khi Nga lo ngại về tình hình gia tăng bạo lực nhưng chưa có phản ứng cụ thể.",
-    "link": "https://dantri.com.vn/the-gioi/syria-giao-tranh-lam-1500-nguoi-chet-nguoi-dan-vao-can-cu-nga-tru-an-20250311090915022.htm",
-    "cat": "the-gioi",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người dân Syria phải trú ẩn tại căn cứ của Nga?",
-    "answers": [
-      {
-        "text": "Vì giao tranh đẫm máu giữa chính quyền và phe đối lập.",
-        "correct": true
-      },
-      {
-        "text": "Vì thời tiết khắc nghiệt.",
-        "correct": false
-      },
-      {
-        "text": "Vì có tin đồn về một cuộc chiến lớn sắp xảy ra.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn tìm việc làm ở Nga.",
         "correct": false
       }
     ]
