Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Đội trưởng Barca bác tin bị vợ 'cắm sừng'",
+    "content": "Đội trưởng Barca, thủ môn Ter Stegen, đã bác bỏ những thông tin sai lệch về việc vợ cũ của anh, Daniela, ngoại tình với HLV cá nhân. Sau khi công bố quyết định ly hôn, một số phương tiện truyền thông đã đưa tin rằng lý do ly hôn là do sự không chung thủy của Daniela. Ter Stegen đã lên tiếng chỉ trích các cơ quan truyền thông này vì đã phát tán thông tin sai sự thật, làm tổn hại đến danh tiếng của vợ anh.",
+    "link": "https://vnexpress.net/doi-truong-barca-bac-tin-bi-vo-cam-sung-4860166.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 6,
+    "question": "Ter Stegen đã phản bác thông tin gì về vợ cũ của mình?",
+    "answers": [
+      {
+        "text": "Vợ cũ của anh không ngoại tình.",
+        "correct": true
+      },
+      {
+        "text": "Vợ cũ của anh có gian díu với HLV cá nhân.",
+        "correct": false
+      },
+      {
+        "text": "Ter Stegen không phải là đội trưởng Barca.",
+        "correct": false
+      },
+      {
+        "text": "Daniela và Ter Stegen quyết định tái hợp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Arteta: 'Arsenal không chịu sức ép lớn ở Champions League'",
     "content": "HLV Mikel Arteta khẳng định rằng Arsenal không chịu sức ép lớn trong cuộc đua Champions League, mặc dù họ đã hụt hơi trong cuộc đua vô địch Ngoại hạng Anh. Arsenal hiện đang có 55 điểm và kém Liverpool 15 điểm, trong khi mùa giải chỉ còn 10 vòng đấu. Arteta cho biết đội bóng của ông rất tâm huyết với Champions League và mong muốn đạt được đẳng cấp cao nhất. Arsenal đã có chiến thắng 7-1 trước PSV ở lượt đi vòng 1/8 và gần như chắc chắn có mặt ở tứ kết.",
     "link": "https://vnexpress.net/arteta-arsenal-khong-chiu-suc-ep-lon-o-champions-league-4860099.html",
@@ -565,37 +592,6 @@
     ]
   },
   {
-    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
-    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
-    "answers": [
-      {
-        "text": "14 kg",
-        "correct": true
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
     "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
     "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
@@ -680,6 +676,37 @@
       },
       {
         "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
+    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
+    "answers": [
+      {
+        "text": "14 kg",
+        "correct": true
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
         "correct": false
       }
     ]
